--- a/templates/modality/modality_list.html
+++ b/templates/modality/modality_list.html
@@ -26,7 +26,7 @@
         
          
         <ul class="list-group list-group-flush">
-            <li class="list-group-item">AETitle: {{ instance.title }}</li>
+            <li class="list-group-item">AETitle: {{ instance.ae_title }}</li>
           <li class="list-group-item">Beschreibung: {{ instance.description }}</li>
           <li class="list-group-item">IP: {{ instance.ip }}</li>
           <li class="list-group-item">Port: {{ instance.port }}</li>
@@ -35,7 +35,7 @@
 
         </ul>  
         <!-- aici ai eroarea cu reverse for patients detail with no argument pattern-->
-        <a href="#modalität bearbeiten" 
+        <a href="{% url 'modalityDetail' instance.id %}" 
          class="btn btn-outline-primary">Modalität bearbeiten</a>
         <a href="{% url 'modalityDelete' instance.id %}" class="btn btn-outline-primary">Modalität entfernen</a>
       </div>
