--- a/templates/modality/create.html
+++ b/templates/modality/create.html
@@ -4,18 +4,16 @@
 <h2> Neue Modalität hinzufügen</h2>
 
 <form method='POST'> {% csrf_token %}
-   
-    <div class="alert alert-warning" id='mgs' role="alert">
-        {% if messages %}
-        <ul class="messages">
-            {% for message in messages %}
-            <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
-            {% endfor %}
-        </ul>
-        {% endif %}
+   {% if messages %}
+   {% for message in messages %}
+    <div class="alert alert-warning 
+        {% if message.tags %} alert-{{ message.tags }}{% endif %}" role="alert">
+         {{ message }} 
+        
 
     </div>
-   
+    {% endfor %}
+   {% endif %}
     <div class="card border-info mb-3">
         <div class="card-body">
             <div class="container">
