patient gender set when editing the patient

--- a/templates/administration/detail.html
+++ b/templates/administration/detail.html
@@ -7,7 +7,7 @@
     {% csrf_token %} 
     <div class="card border-info mb-3 w-75">
         <div class="card-header">
-            Betriebsname: {{ object.name }}
+             {{ object.name }}
           </div>
         <div class="card-body">
             <ul class="list-group list-group-flush">
