--- a/templates/modality/create.html
+++ b/templates/modality/create.html
@@ -85,7 +85,7 @@
                         <div class="col">
                             <label>Standort: </label>
                         </div>
-                        <div class="col">
+                        <div class="col" id= "street">
                             {{form.associate_location }}
                         </div>
                     </div>
