--- a/templates/modality/modality_list.html
+++ b/templates/modality/modality_list.html
@@ -6,19 +6,19 @@
 
 <br>
 
-{% for instance in object_list %}
+{% for instance in object_list reversed %}
 <div class="card border-info mb-3 w-100" >
     <div class="card-body">
     <div class="container">
       <div class="row">
-        <div class = "card w-2">
+        <div class = "card w-2 border-0">
         <div class="col">
           <img src="/static/images/mri.png" class="card-img-top" width="55" height="45">
         </div>
       </div>
        
         <div class="col-15">
-          <h5 class="card-title">{{instance.title}} </h5>
+          <h5 class="card-title">{{instance.ae_title}} </h5>
         </div>
       </div>
     </div>
@@ -26,15 +26,15 @@
         
          
         <ul class="list-group list-group-flush">
-            <li class="list-group-item">AETitle: {{ instance.ae_title }}</li>
+            <li class="list-group-item">Title: {{ instance.title }}</li>
           <li class="list-group-item">Beschreibung: {{ instance.description }}</li>
           <li class="list-group-item">IP: {{ instance.ip }}</li>
           <li class="list-group-item">Port: {{ instance.port }}</li>
-          <li class="list-group-item">Status: {{ instance.status }}</li>
-          <li class="list-group-item"> Standort: {{ instance.associate_location }}</li>
-
+         
+          <li class="list-group-item" > Standort: {{ instance.associate_location}} </li>
+           
         </ul>  
-        <!-- aici ai eroarea cu reverse for patients detail with no argument pattern-->
+ 
         <a href="{% url 'modalityDetail' instance.id %}" 
          class="btn btn-outline-primary">Modalität bearbeiten</a>
         <a href="{% url 'modalityDelete' instance.id %}" class="btn btn-outline-primary">Modalität entfernen</a>
