--- a/templates/patient/patient_create.html
+++ b/templates/patient/patient_create.html
@@ -83,6 +83,16 @@
                 <li class="list-group-item">
                     <div class="row">
                         <div class="col">
+                            <label>Stadt: </label>
+                        </div>
+                        <div class="col">
+                            {{form.city}}
+                        </div>
+                    </div>
+                </li>
+                <li class="list-group-item">
+                    <div class="row">
+                        <div class="col">
                             <label>PLZ: </label>
                         </div>
                         <div class="col">
