--- a/templates/patient/patient_delete.html
+++ b/templates/patient/patient_delete.html
@@ -11,9 +11,9 @@
             <div class="card-body">
             <div class="container">
               <div class="row">
-                <div class = "card w-2">
+                <div class = "card w-2 border-0">
                 <div class="col">
-                  <img src="/static/images/smart-home.png" class="card-img-top" width="55" height="45">
+                  <img src="/static/images/batman.png" class="card-img-top" width="55" height="45">
                 </div>
               </div>
                 
@@ -26,7 +26,8 @@
                   <li class="list-group-item">Nachname: {{ object.second_name }}</li>
                   <li class="list-group-item">Geburtstag: {{ object.birthdate }}</li>
                   <li class="list-group-item">Strasse.: {{ object.address }}</li>
-                  <li class="list-group-item">Nr.: {{ object.number }}</li>
+                  <li class="list-group-item">Hausnr.: {{ object.number }}</li>
+                  <li class="list-group-item">Stadt: {{ object.city }}</li>
                   <li class="list-group-item">PLZ: {{ object.code }}</li>
                   <li class="list-group-item">Sprache: {{ object.language }}</li>
                   
