--- a/templates/patient/patient_list.html
+++ b/templates/patient/patient_list.html
@@ -35,8 +35,8 @@
      
       <ul class="list-group list-group-flush">
         <li class="list-group-item">Geburtstag: {{ instance.birthdate }}</li>
-        <li class="list-group-item">Addresse: {{ instance.address }} ||  Hausnummer.: {{ instance.number }}
-          PLZ: {{ instance.code }}</li>
+        <li class="list-group-item">Addresse: {{ instance.address }}, {{ instance.number }},
+           {{ instance.city }}, {{ instance.code }}</li>
         <li class="list-group-item">Sprache: {{ instance.language }}</li>
       </ul>  
       <!-- aici ai eroarea cu reverse for patients detail with no argument pattern-->
