modality linked to location

--- a/templates/modality/create.html
+++ b/templates/modality/create.html
@@ -83,7 +83,7 @@
                         <div class="col">
                             <label>Standort: </label>
                         </div>
-                        <div class="col" id= "street">
+                        <div class="col" id="associate_location">
                             {{form.associate_location }}
                         </div>
                     </div>
