--- a/templates/modality/detail.html
+++ b/templates/modality/detail.html
@@ -1,14 +1,13 @@
-
-{% extends 'base.html' %} 
+{% extends 'base.html' %}
 
 {% block content %}
 
 <h2> Modalität bearbeiten</h2>
 
 <form action='.' method='POST'> {% csrf_token %}
-   
-     
-   
+
+
+
     <div class="card border-info mb-3">
         <div class="card-body">
             <div class="container">
@@ -36,7 +35,7 @@
                         <div class="col">
                             <input type="text" name="name" id="id_name" value='{{ object.ae_title }}'>
                         </div>
-                         
+
                     </div>
                     <br>
                     <div class="row">
@@ -46,7 +45,7 @@
                         <div class="col">
                             <input type="text" name="name" id="id_name" value='{{ object.title }}'>
                         </div>
-                         
+
                     </div>
                     <br>
                     <div class="row">
@@ -56,7 +55,7 @@
                         <div class="col">
                             <input type="text" name="name" id="id_name" value='{{ object.description }}'>
                         </div>
-                         
+
                     </div>
                     <br>
                     <div class="row">
@@ -66,7 +65,7 @@
                         <div class="col">
                             <input type="text" name="name" id="id_name" value='{{ object.ip }}'>
                         </div>
-                        
+
                     </div>
                     <br>
                     <div class="row">
@@ -76,7 +75,7 @@
                         <div class="col">
                             <input type="text" name="name" id="id_name" value='{{ object.port }}'>
                         </div>
-                        
+
                     </div>
                     <br>
 
@@ -84,10 +83,11 @@
                         <div class="col">
                             <label>Standort: </label>
                         </div>
-                        <div class="col">
-                            <input type="text" name="associate_location" id="id_associate_location" value='{{ object.associate_location }}'>
+
+                        <div class="col" id="associate_location">
+                            {{ object.associate_location }}
                         </div>
-                         
+
                     </div>
 
 
@@ -98,8 +98,8 @@
         </div>
     </div>
 
-    <input type='submit' class="btn btn-outline-primary" value='Speichern'/>
+    <input type='submit' class="btn btn-outline-primary" value='Speichern' />
     <a href="{% url 'modalities' %}" class="btn btn-outline-primary">Abbrechen</a>
 </form>
- 
+
 {% endblock %}
