--- a/templates/patient/patient_list.html
+++ b/templates/patient/patient_list.html
@@ -42,7 +42,7 @@
       <!-- aici ai eroarea cu reverse for patients detail with no argument pattern-->
       <a href="{% url 'patientDetail' instance.id %}" 
        class="btn btn-outline-primary">Patient bearbeiten</a>
-      <a href="{% url 'worklistCreate' %}" class="btn btn-outline-primary">Worklist erstellen</a>
+      <a href="{% url 'worklistCreate' %}?patient-id={{ instance.id }}" class="btn btn-outline-primary">Worklist erstellen</a>
       <a href="{% url 'patientDelete' instance.id %}" 
        class="btn btn-outline-primary">Patient löschen</a>
     </div>
