--- a/templates/worklists/worklist_create.html
+++ b/templates/worklists/worklist_create.html
@@ -89,7 +89,7 @@
                         <label>Patient ID: </label>
                         </div>
                         <div class="col">
-                            <input type="text" name="id" id="id_id" value=' {{ patient.id }}' readonly>
+                            <input type="text" name="id" id="id_id" value='{{ patient.id }}' readonly>
                             
                         </div>
                        
@@ -114,7 +114,7 @@
                             <label>Patient Geschlecht: </label>
                         </div>
                         <div class="col">
-                            <input type="text" name="patient_s_sex" id="id_patient_s_sex" value=' {{ patient.title}}' readonly>
+                            <input type="text" name="patient_s_sex" id="id_patient_s_sex" value='{{ patient.get_title_display}}' readonly>
                             
                         </div>
                     </div>
