--- a/templates/worklists/worklist_create.html
+++ b/templates/worklists/worklist_create.html
@@ -41,8 +41,8 @@
                         <div class="col">
                             <input type="text" name="scheduled_procedure_step_start_date" 
                             id="id_scheduled_procedure_step_start_date" 
-                            value='{{ date|date }}' readonly>
-                             <!-- 
+                            value='{{ date }}' readonly>
+                              <!--
                              {{ form.scheduled_procedure_step_start_date }}-->
                         </div>  
                     </div>
@@ -55,7 +55,7 @@
                          <div class="col" >
                             <input type="text" name="scheduled_procedure_step_start_time" 
                             id="id_scheduled_procedure_step_start_time" 
-                            value='{{ date|time:"H:i" }}' readonly>
+                            value='{{ time|time }}' readonly>
                             <!-- 
                              {{form.scheduled_procedure_step_start_time}}-->
                         </div>  
