worklist lists with doctors dropdown

--- a/templates/worklists/worklist_create.html
+++ b/templates/worklists/worklist_create.html
@@ -73,7 +73,7 @@
                 </li>
                 <li class="list-group-item">
                     <div class="row">
-                        <div class="col">
+                        <div class="col"> 
                             <label>Zuständiger Arzt: </label>
                         </div>
                         <div class="col">
@@ -98,7 +98,7 @@
                         <label>Patient ID: </label>
                         </div>
                         <div class="col">
-                            <input type="text" name="id" id="id_id" value='{{ patient.id }}' readonly>
+                            <input type="text" name="patient_id" id="id_patient_id" value='{{ patient.id }}' readonly>
                             
                         </div>
                        
