--- a/templates/base.html
+++ b/templates/base.html
@@ -29,8 +29,9 @@
 </head>
 
 <body>
-  <nav class="navbar sticky-top navbar-light bg-light">
-
+  
+  <nav class="navbar sticky-top navbar-light md-light border-0">
+<div class="container-md">
     <div class="card text-center w-100 ">
       <div class="card-header  ">
         <ul class="nav ">
@@ -74,7 +75,7 @@
           </li>
         </ul>
       </div>
-    </div>
+    </div></div>
   </nav>
 
   <div class="container-md">
@@ -82,7 +83,7 @@
     this code will be replaced. just like you, if you are not good at your job
     {% endblock %}
   </div>
-
+ 
 
 </body>
 
