--- a/templates/patient/patient_list.html
+++ b/templates/patient/patient_list.html
@@ -2,9 +2,10 @@
 {% extends 'base.html' %} 
 
 {% block content %}
- 
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <form class="form-inline my-2 my-lg-0" action ="{% url 'searchResult' %}" method="GET">
+
+<nav class="navbar navbar-light bg-light">
+   
+    <form class="form-inline " action ="{% url 'searchResult' %}" method="GET">
       <input class="form-control mr-sm-2" type="text" 
       name ='q' id= 'id_q' placeholder="Patient suchen" aria-label="Search">
       <script type="text/javascript">
@@ -22,8 +23,8 @@
   <div class="card-body">
   <div class="container">
     <div class="row">
-      <div class = "card w-2">
-      <div class="col">
+      <div class = "card w-2 border-0">
+      <div class="col ">
         <img src="/static/images/batman.png" class="card-img-top" width="55" height="45">
       </div>
     </div>
