exceptions for patients edit created

--- a/templates/patient/patient_create.html
+++ b/templates/patient/patient_create.html
@@ -9,7 +9,7 @@
         <div class="card-body">
             <div class="container">
                 <div class="row">
-                    <div class="card w-2">
+                    <div class="card w-2 border-0">
                         <div class="col">
 
                             <img src="/static/images/batman.png" class="card-img-top" width="55" height="45">
