--- a/templates/patient/patient_detail.html
+++ b/templates/patient/patient_detail.html
@@ -56,7 +56,9 @@
                             <label>Geburtstag: </label>
                         </div>
                         <div class="col"> 
-                            <input type="date" class="datepicker" name="birthdate" id="id_birthdate" >
+                            <!-- class="datepicker" -->
+                            <input type="text" name="birthdate" id="id_birthdate"  
+                            value="{{object.birthdate}}">
                         </div>
                     </div>
                 </li>
